--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
     <title>AWS Webinar</title>
   </head>
   <body>
-    <p>My amazing website for Istanbul Loft V2</p>
+    <p>My amazing website for service migration to new region</p>
   </body>
 </html>
 
