--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
     <title>AWS Webinar</title>
   </head>
   <body>
-    <p>My amazing website for Cologne Dev Day!</p>
+    <p>My amazing website for Vienna Dev Day!</p>
   </body>
 </html>
 
